<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrew.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Texttest"
            android:id="@+id/quiz"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Texttest"
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/question1" />

            <CheckBox
                android:id="@+id/cb_answer_question1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="selectitem"
                android:text="@string/answer1" />

            <CheckBox
                android:id="@+id/cb_answer_question1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="selectitem"
                android:text="@string/answer2" />

            <CheckBox
                android:id="@+id/cb_answer_question1c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="selectitem"
                android:text="@string/answer3" />

            <CheckBox
                android:id="@+id/cb_answer_question1d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="selectitem"
                android:text="@string/answer4" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Texttest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/question2" />

            <EditText
                android:id="@+id/et_answer_question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Answer"
                android:inputType="text"
                android:paddingBottom="20dp" />

            <TextView
                android:id="@+id/textView3"
                style="@style/Texttest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/question3" />

            <EditText
                android:id="@+id/et_answer_question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Answer"
                android:inputType="text"
                android:paddingBottom="20dp" />

            <TextView
                android:id="@+id/textView4"
                style="@style/Texttest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/question4" />

            <RadioGroup
                android:id="@+id/radiogroup1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_answer_question4a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/answer5" />

                <RadioButton
                    android:id="@+id/rb_answer_question4b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/answer6" />

                <RadioButton
                    android:id="@+id/rb_answer_question4c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/answer7" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Submit"
            android:text="Submit" />

    </LinearLayout>

</ScrollView>
